--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,149 @@
-body {
-    background-color: gray;
-	/* Use a system font, if none are available use an available sans-sarif   font */
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	margin: 0;
-  height: 100vh;
+#start-screen {
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-}
-
-section.board {
-  display: grid;
-  grid-template-rows: repeat(3, 10vmin);
-  grid-template-columns: repeat(3, 10vmin);
-  grid-gap: 0vmin;
-}
-
-div {
-  border: 3px solid black;
-  font-size: 8vmin;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+}
+
+#start-screen h1 {
+  font-size: 3em;
+  margin: 15px;
+}
+#start-btn {
+  background-color: #4CAF50;
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+  font-size: 1.2em;
+  cursor: pointer;
+  margin-top: 30px;
+}
+
+#pick-screen {
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#pick-screen h1{
+  font-size: 3em;
+  margin: 15px;
+}
+
+#pick-x {
+  margin: 10px;
+  border-radius: 5px;
+}
+
+#pick-o{
+  margin: 10px;
+  border-radius: 5px;
+}
+
+#enemy-pick {
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#enemy-pick h1 {
+  font-size: 3em;
+  margin: 15px;
+}
+
+#robot{
+  margin: 10px;
+  border-radius: 5px;
+}
+
+#human {
+  margin: 10px;
+  border-radius: 5px;
+}
+
+#play-board {
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #000;
+  border-radius: 5px;
+  margin: 10px;
+}
+
+#col {
+  margin: auto;
+  justify-content: auto;
+}
+
+@-webkit-keyframes hvr-back-pulse {
+  50% {
+    background-color: rgba(32, 152, 209, 0.75);
+  }
+}
+
+@keyframes hvr-back-pulse {
+  50% {
+    background-color: rgba(32, 152, 209, 0.75);
+  }
+}
+
+.hvr-back-pulse {
+  display: inline-block;
   vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  overflow: hidden;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+
+.hvr-back-pulse:hover,
+.hvr-back-pulse:focus,
+.hvr-back-pulse:active {
+  -webkit-animation-name: hvr-back-pulse;
+  animation-name: hvr-back-pulse;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  background-color: #2098D1;
+  background-color: #2098d1;
+  color: white;
+}
+
+.container {
+  margin-top: 50%;
 }
